src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DataBindingOnClrProperty.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted"
>
    <DockPanel.Resources>
        <XmlDataProvider x:Key="DSO1" XPath="/root">
          <x:XData>
            <root xmlns="">
                <brush>Red</brush>
                <fontsize>200</fontsize>
            </root>
          </x:XData>
        </XmlDataProvider>
    </DockPanel.Resources>

    <TextBlock>
	<cc:MyClass.MyColor>
		<cc:MyColor Color="{Binding Mode=OneWay,Source={StaticResource ResourceKey=DSO1},XPath=brush}" />
	</cc:MyClass.MyColor>
    </TextBlock>
</DockPanel>
</Page>
